# avm

./: .gitignore  CMakeLists.txt
client/: CMakeLists.txt  client.cpp
server/: CMakeLists.txt  server.cpp
shared/: stdafx.hpp
